--- a/css/styles-logico.css
+++ b/css/styles-logico.css
@@ -27,18 +27,23 @@
 }
 
 
+html {
+     /* background: red; */
+     scroll-behavior: smooth;
+}
+
 :root{
     font-size: 18px;
     --white30: white;
     --white20: #A5A3A5;
     --white10: #3A3539;
+    
 }
 
 body {
     color: var(--white30);
     font-family: "nunito", sans-serif;
     background: #251F24;
-    ;
 }
 
 a {
@@ -46,22 +51,24 @@ a {
 }
 
 .header {
-    position: sticky;
-    inset-block-start: -45px;
+    /* position: sticky; */
+    /* inset-block-start: -45px; */
 }
 
 .header-content {
-    position: relative;
-    inset-block-start: 65px;
+    padding-inline: 20px;
+    /* position: relative;
+    inset-block-start: 65px; */
 }
 
 header{
+    margin-block-start: 20px;
     font-size: 14px;
     color: var(--white30);
-    position: absolute;
-    inset-block-start: 0px;
-    inset-inline-start: -208px;
-    inline-size: 188px;
+    /* position: absolute; */
+    /* inset-block-start: 0px; */
+    /* inset-inline-start: -208px; */
+    /* inline-size: 188px; */
 }
 
 header li{
@@ -86,8 +93,10 @@ h1 h2 h3{
 }
 
 h1{
-    font-size: 60px;
-    margin-block-start: 64px;
+    /* font-size: 60px; */
+    font-size: 40px;
+    /* margin-block-start: 64px; */
+    margin-block-start: 20px;
     margin-block-end: 16px;
     /*font-size: 3.75em;*/
 }
@@ -116,6 +125,26 @@ pre{
     border-radius: 8px;
 }
 
+pre::-webkit-scrollbar{
+    block-size: 10px;
+    /* background-color: red; */
+}
+
+pre::-webkit-scrollbar-thumb{
+    background: var(--white20);
+    border-radius: 2px;
+}
+
+body::-webkit-scrollbar{
+    inline-size: 15px;
+    /* background-color: red; */
+}
+
+body::-webkit-scrollbar-thumb{
+    background: var(--white20);
+    border-radius: 2px;
+}
+
 p {
     color: var(--white20);
 }
@@ -136,12 +165,20 @@ blockquote p {
 
 .hero{
     background: linear-gradient(96.07deg, #314755 30.63%, #26A0DA 102.18%);
-    height: 350px;
+    block-size: 50px;
 }
 
 .section-content img {
     margin-block-start: 40px;
     display: block;
+    height: 100%;
+    /* width: 100%; */
+}
+
+.section-content-2 img{
+    /* display: block; */
+    /* height: 100%; */
+    width: 100%;
 }
 
 .section-content{
@@ -180,21 +217,91 @@ blockquote p {
 }
 
 .slider {
-    outline: 1px solid #26A0DA;
+    /* outline: 1px solid #26A0DA; */
+    overflow: hidden;
 }
 
 .slider-conteiner{
-border: 1px solid red;
-block-size: 100px;
+    /* border: 1px solid red; */
+    /*block-size: 100px;*/
 display: block;
 overflow: auto;
+overflow-x: hidden;
 scroll-behavior: smooth;
 white-space: nowrap;
+font-size: 0;
 }
 
-.slider-slide h1{
+.video{
     margin: 0;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     display: inline-block;
     width: 100%;
+    height: auto;
+    aspect-ratio: 16/9;
+}
+
+.slider-bullet-list {
+    text-align: center;
+    margin-block-start: 10px;
+}
+
+.slider-bullet {
+    display: inline-block;
+    inline-size: 15px;
+    block-size: 15px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+.form input {
+    inline-size: 100%;
+    border: 1px solid var(--white30);
+    background: #251F24;
+    box-sizing: border-box;
+    border-radius: 8px;
+    padding-block: 12px;
+    padding-inline: 16px;
+    color: var(--white30);
+    font-size: 16px;
+    margin-block-end: 24px;
+}
+
+form input[type="submit"]{
+    background: #157EFB;
+    border: none;
+}
+
+.form input::-webkit-input-placeholder {
+color: var(--white20);
+}
+
+
+@media screen and (min-width: 1366px) {
+    .hero {
+        block-size: 350px;
+    }
+    .header {
+        position: sticky;
+        inset-block-start: -45px;
+    }
+    
+    .header-content {
+        position: relative;
+        inset-block-start: 65px;
+        padding-inline: 0;
+    }
+    
+    header{
+        font-size: 14px;
+        color: var(--white30);
+        position: absolute;
+        inset-block-start: 0px;
+        inset-inline-start: -208px;
+        inline-size: 188px;
+    }
+    h1 {
+        font-size: 60px;
+        margin-block-start: 64px;
+    }
 }
