--- a/css/css-d.css
+++ b/css/css-d.css
@@ -34,23 +34,24 @@ html {
 
 :root{
     font-size: 18px;
-    --white30: white;
-    --white20: #A5A3A5;
-    --white10: #3A3539;
-    
+    --gray40: #424242;
+    --gray30: #212121;
+    --gray20: #212429;
+    --gray10: #616161;
 }
 
 body {
-    color: var(--white30);
-    font-family: "nunito", sans-serif;
-    background: #251F24;
+    color: var(--gray30);
+    font-family: "roboto", sans-serif;
+    background: white;
 }
 
 a {
-    color: var(--white30);
+    color: var(--gray10);
 }
 
 .header {
+    color: var(--gray10);
     /* position: sticky; */
     /* inset-block-start: -45px; */
 }
@@ -61,10 +62,14 @@ a {
     inset-block-start: 65px; */
 }
 
+.header-wrapper {
+    color: var(--gray10);
+}
+
 header{
     margin-block-start: 20px;
     font-size: 14px;
-    color: var(--white30);
+    color: var(--gray10);
     /* position: absolute; */
     /* inset-block-start: 0px; */
     /* inset-inline-start: -208px; */
@@ -72,18 +77,27 @@ header{
 }
 
 header li{
-    margin-block-end: 16px;
-    /* color: var(--white20); */
+    padding-right: 8p;
+    padding-left: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    /* margin-block-end: 8px; */
+    /* color: var(--gray20); */
 }
 
 header a{
-    color: var(--white20);
+    /* color: var(--gray20); */
     text-decoration: none;
 }
 
-header a:hover{
-    color: var(--white30);
+header li:hover{
+    color: white;
+    background: #5551FF;
 }
+
+header a:hover{
+    color: white;
+    }
 
 nav details summary{
     font-weight: bold;
@@ -91,11 +105,14 @@ nav details summary{
 
 h1 h2 h3{
     font-weight: normal;
+    color: black;
 }
 
 h1{
     /* font-size: 60px; */
+    text-align: center;
     font-size: 40px;
+    font-weight: 700;
     /* margin-block-start: 64px; */
     margin-block-start: 20px;
     margin-block-end: 16px;
@@ -104,14 +121,26 @@ h1{
 
 h2{
 font-size: 2em;
+font-weight: 400;
 margin-block: 40px;
 
 }
 
 h3{
     font-size: 1.5em;
-    font-weight: 600;
+    font-weight: 400;
     margin-block: 16px;
+    /* color: black; */
+}
+
+.section-content h3{
+    
+    display: inline;
+    /* border-bottom: 4px solid var(--gray30); */
+}
+
+.fotitos img{
+    width: 100%;
 }
 
 hr {
@@ -120,7 +149,8 @@ hr {
 }
 
 pre{
-    background: var(--white10);
+    border: 8px solid #5551FF;
+    box-shadow: -8px 8px #87A6E3;
     padding: 40px;
     overflow: auto;
     border-radius: 8px;
@@ -132,7 +162,7 @@ pre::-webkit-scrollbar{
 }
 
 pre::-webkit-scrollbar-thumb{
-    background: var(--white20);
+    background: var(--gray20);
     border-radius: 2px;
 }
 
@@ -142,40 +172,58 @@ body::-webkit-scrollbar{
 }
 
 body::-webkit-scrollbar-thumb{
-    background: var(--white20);
+    background: var(--gray20);
     border-radius: 2px;
 }
 
 p {
-    color: var(--white20);
+    color: var(--gray20);
 }
 
 blockquote {
-    margin-block-start: 80px;
-    margin-block-end: 63px;
-    background-color: var(--white10);
-    border-radius: 8px;
-    line-height: 32px;
+
     font-size: 24px;
-    padding: 24px; 
+    margin: 32px 0;
+    margin-block: 80px;
+    padding-left: 16px;
+    line-height: 24px;
+    border-left: 4px solid var(--gray30);
+}
+
+blockquote span{
+    color: var(--gray10);
+}
+
+blockquote span::before{
+    content: "-";
 }
 
 blockquote p {
-    color: var(--white30);
+    color: var(--gray30);
 }
 
 .hero{
-    background: linear-gradient(96.07deg, #314755 30.63%, #26A0DA 102.18%);
+    /* background-image: linear-gradient(to top, rgba(255, 255, 255, .3), transparent), url(../images/pattern.png); */
+    background: linear-gradient(274.51deg, rgba(74, 0, 224, 0.6) 5%, rgba(142, 45, 226, 0.5) 130.61%), url(../images/backgroung.png);
     block-size: 50px;
+}
+
+.section-content p{
+    color: var(--gray40);
 }
 
 .section-content img {
     margin-block-start: 40px;
     display: block;
     height: 100%;
+    text-align: center;
+    margin: 0 auto;
     /* width: 100%; */
 }
+.fotitos img{
+    width: 100%;
 
+}
 .section-content-2 img{
     /* display: block; */
     /* height: 100%; */
@@ -183,6 +231,7 @@ blockquote p {
 }
 
 .section-content{
+    text-align: center;
     counter-reset: titleList;
 }
 
@@ -194,14 +243,16 @@ blockquote p {
     content: counter(titleList, decimal)". ";
  }
 
-/*.section-content h3::after{
+/* .section-content h3::after{
     content: "";
     width: 32px;
     height: 4px;
-    background-color: red;
+    background-color: var(--gray30);
     display: inline-block;
-
-}*/
+    position: relative;
+    left: 0;
+    bottom: 0;
+} */
 
 
 .main hr {
@@ -209,7 +260,7 @@ blockquote p {
 }
 
 .wrapper {
-    max-inline-size: 636px;
+    max-inline-size: 903px;
     margin: auto;
 }
 
@@ -251,34 +302,36 @@ font-size: 0;
     display: inline-block;
     inline-size: 15px;
     block-size: 15px;
-    background-color: white;
+    background-color: #999999;
     border-radius: 50%;
 }
 
 .slider-bullet:hover {
-    background: var(--white10);
+    background: var(--gray40);
 }
 
 .form input {
-    inline-size: 100%;
-    border: 1px solid var(--white30);
-    background: #251F24;
+    /* inline-size: 100%; */
+    border: 1px solid var(--gray30);
+    background: white;
     box-sizing: border-box;
-    border-radius: 8px;
+    border-radius: 90px;
     padding-block: 12px;
     padding-inline: 16px;
-    color: var(--white30);
+    color: white;
     font-size: 16px;
     margin-block-end: 24px;
+    margin-inline-start: 24px;
 }
 
 form input[type="submit"]{
-    background: #157EFB;
+    margin-inline-start: 0;
+    background: var(--gray30);
     border: none;
 }
 
 .form input::-webkit-input-placeholder {
-color: var(--white20);
+color: var(--gray20);
 }
 
 
@@ -298,21 +351,23 @@ color: var(--white20);
     }
     
     header{
-        font-size: 14px;
-        color: var(--white30);
+        /* font-size: 14px; */
+        /* color: var(--gray10); */
         position: absolute;
         inset-block-start: 0px;
-        inset-inline-start: -208px;
+        inset-inline-start: 910px;
+        /* font-weight: 500; */
         inline-size: 188px;
     }
     h1 {
-        font-size: 60px;
+        /* font-weight: 700;
+        font-size: 60px; */
         margin-block-start: 64px;
     }
 }
 
 .footer{
-    background: var(--white30);
+    background: var(--gray30);
   }
   
   .footer-content{
@@ -320,7 +375,7 @@ color: var(--white20);
   }
   
   .footer-copyright, .social-media{
-    color: #251F24;
+    color: white;
     margin: 0;
     text-align: center;
   }
